--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom",
       "esnext"
     ],
+    "types": ["node", "react"],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
